<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <TextView
            android:text="@string/registroTXT"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:src="@drawable/principal"/>

        <!-- CORREO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/correo"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textColorHint="#000"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- PASSWORD -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#000"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- NOMBRES -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nombres"
                android:hint="@string/nombres"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="@color/black"
                android:background="@color/white"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- APELLIDOS -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/apellidos"
                android:hint="@string/apellidos"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- EDAD -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edad"
                android:hint="@string/edad"
                android:inputType="number"
                android:textColorHint="#000"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- TELEFONO -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/telefono"
                android:hint="@string/telefono"
                android:inputType="number"
                android:textColorHint="#000"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- DIRECCION -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/direccion"
                android:hint="@string/direccion"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- REGISTRO DE USUARIO -->
        <Button
            android:id="@+id/registroUsuario"
            android:text="@string/registroUsuario"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:padding="15dp"
            android:onClick="regitrarme"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

</ScrollView>